test overflow fix

--- a/front-end/Pages/homepage/homepage.css
+++ b/front-end/Pages/homepage/homepage.css
@@ -55,7 +55,6 @@
 html {
   scroll-behavior: smooth;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 body {
